# SpaceWars

./: .gitignore  CMakeLists.txt
SpaceWars/: CMakeLists.txt
SpaceWars/include/framework/: application.h
SpaceWars/src/: main.cpp
SpaceWars/src/framework/: application.cpp
SpaceWarsEngine/: CMakeLists.txt
SpaceWarsEngine/include/: entry_point.h
SpaceWarsEngine/include/framework/: actor.h  application.h  core.h  world.h
SpaceWarsEngine/src/: entry_point.cpp
SpaceWarsEngine/src/framework/: actor.cpp  application.cpp  world.cpp
SpaceWarsGame/: CMakeLists.txt
SpaceWarsGame/include/game_framework/: game_application.h
SpaceWarsGame/src/game_framework/: game_application.cpp
